--- a/.github/workflows/no-op.yml
+++ b/.github/workflows/no-op.yml
@@ -26,89 +26,102 @@ jobs:
   frontend-build:
     runs-on: ubuntu-latest
     steps:
-      - name: No-op for frontend-build
-        run: |
-          echo "This is a no-op step for frontend-build to ensure a successful status."
-          exit 0
-
+      - run: exit 0
+#  ------------------------------------
+#  DE-COMMENT POST MERGING
+#  ------------------------------------
+#
+#  pre-commit:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - run: exit 0
+#  python-lint:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - run: exit 0
+#  test-postgres-hive:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - run: exit 0
+#  test-postgres-presto:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - run: exit 0
+#  unit-tests:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - run: exit 0
+#  test-mysql:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - run: exit 0
+#  test-postgres:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - run: exit 0
+#  test-sqlite:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - run: exit 0
+## ------------------------------------------------------
+## TO BE DEPRECATED
+## These no-ops were used to deprecate/renaming checks
+## and can be safely delete if seen on `master`
+## ------------------------------------------------------
   pre-commit:
     strategy:
       matrix:
-        python-version: ["3.9"]
+        python-version: ["3.9", "3.10", ""]
     runs-on: ubuntu-latest
     steps:
-      - name: No-op for pre-commit
-        run: |
-          echo "This is a no-op step for pre-commit to ensure a successful status."
-          exit 0
+      - run: exit 0
 
   python-lint:
     strategy:
       matrix:
-        python-version: ["3.9", "3.10"]
+        python-version: ["3.9", "3.10", ""]
     runs-on: ubuntu-latest
     steps:
-      - name: No-op for python-lint
-        run: |
-          echo "This is a no-op step for python-lint to ensure a successful status."
-          exit 0
+      - run: exit 0
   test-postgres-hive:
     strategy:
       matrix:
-        python-version: ["3.9", "3.10"]
+        python-version: ["3.9", "3.10", ""]
     runs-on: ubuntu-latest
     steps:
-      - name: No-op for frontend-build
-        run: |
-          echo "This is a no-op step for test-postgres-postgres to ensure a successful status when skipped."
-          exit 0
+      - run: exit 0
   test-postgres-presto:
     strategy:
       matrix:
-        python-version: ["3.9", "3.10"]
+        python-version: ["3.9", "3.10", ""]
     runs-on: ubuntu-latest
     steps:
-      - name: No-op for frontend-build
-        run: |
-          echo "This is a no-op step for test-postgres-postgres to ensure a successful status when skipped."
-          exit 0
+      - run: exit 0
   unit-tests:
     strategy:
       matrix:
-        python-version: ["3.9", "3.10"]
+        python-version: ["3.9", "3.10", ""]
     runs-on: ubuntu-latest
     steps:
-      - name: No-op for frontend-build
-        run: |
-          echo "This is a no-op step for unit-tests to ensure a successful status when skipped."
-          exit 0
+      - run: exit 0
   test-mysql:
     strategy:
       matrix:
-        python-version: ["3.9"]
+        python-version: ["3.9", "3.10", ""]
     runs-on: ubuntu-latest
     steps:
-      - name: No-op for test-mysql
-        run: |
-          echo "This is a no-op step for test-mysql to ensure a successful status when skipped."
-          exit 0
+      - run: exit 0
   test-postgres:
     strategy:
       matrix:
-        python-version: ["3.9"]
+        python-version: ["3.9", "3.10", ""]
     runs-on: ubuntu-latest
     steps:
-      - name: No-op for test-postgres
-        run: |
-          echo "This is a no-op step for test-postgres to ensure a successful status when skipped."
-          exit 0
+      - run: exit 0
   test-sqlite:
     strategy:
       matrix:
-        python-version: ["3.9"]
+        python-version: ["3.9", "3.10", ""]
     runs-on: ubuntu-latest
     steps:
-      - name: No-op for test-sqlite
-        run: |
-          echo "This is a no-op step for test-sqlite to ensure a successful status when skipped."
-          exit 0
+      - run: exit 0
