--- a/.github/workflows/no-op.yml
+++ b/.github/workflows/no-op.yml
@@ -115,7 +115,7 @@ jobs:
   test-postgres:
     strategy:
       matrix:
-        python-version: ["3.9", "3.10", ""]
+        python-version: ["3.9", "3.10", "3.11", ""]
     runs-on: ubuntu-latest
     steps:
       - run: exit 0
