--- a/.github/workflows/superset-python-presto-hive.yml
+++ b/.github/workflows/superset-python-presto-hive.yml
@@ -59,6 +59,7 @@ jobs:
         with:
           persist-credentials: false
           submodules: recursive
+          lfs: false
       - name: Check if python changes are present
         id: check
         env:
@@ -118,6 +119,7 @@ jobs:
         with:
           persist-credentials: false
           submodules: recursive
+          lfs: false
       - name: Check if python changes are present
         id: check
         env:
