--- a/.github/workflows/docker-release.yml
+++ b/.github/workflows/docker-release.yml
@@ -55,6 +55,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           persist-credentials: false
+          lfs: false
 
       - name: Setup supersetbot
         uses: ./.github/actions/setup-supersetbot/
