--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -56,6 +56,8 @@ jobs:
         uses: actions/checkout@v4
         with:
           persist-credentials: false
+          lfs: false
+
 
       - name: Setup supersetbot
         uses: ./.github/actions/setup-supersetbot/
