--- a/.github/workflows/superset-frontend.yml
+++ b/.github/workflows/superset-frontend.yml
@@ -26,6 +26,7 @@ jobs:
         with:
           persist-credentials: false
           submodules: recursive
+          lfs: false
       - name: Check npm lock file version
         run: ./scripts/ci_check_npm_lock_version.sh ./superset-frontend/package-lock.json
       - name: Check if frontend changes are present
