--- a/.github/workflows/superset-translations.yml
+++ b/.github/workflows/superset-translations.yml
@@ -22,6 +22,7 @@ jobs:
         with:
           persist-credentials: false
           submodules: recursive
+          lfs: false
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
@@ -46,6 +47,7 @@ jobs:
         with:
           persist-credentials: false
           submodules: recursive
+          lfs: false
       - name: Setup Python
         uses: ./.github/actions/setup-backend/
         with:
